--- a/posSystem/Views/Login/Index.cshtml
+++ b/posSystem/Views/Login/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
-
 }
-
 
 <div class="row">
     <div class="col-lg-6 d-none d-lg-block">
@@ -22,8 +20,8 @@
                 </div>
                 <div class="form-group">
                     <div class="custom-control custom-checkbox small">
-                        <input type="checkbox" class="custom-control-input" id="customCheck">
-                        <label class="custom-control-label" for="customCheck">Remember Me</label>
+                        <input type="checkbox" class="custom-control-input" id="rememberMe" name="rememberMe">
+                        <label class="custom-control-label" for="rememberMe">Remember Me</label>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary btn-user btn-block" id="btnLogin">
